--- a/hello.html
+++ b/hello.html
@@ -9,9 +9,10 @@
   <body>
     <div>hello</div>
     <h1>Hello</h1>
-    <head>
+   
       <i class="fas fa-hand-holding"></i>
       hahhahahahhaha
-    </head>
+      <p>Wrong head tag</p>
+   
   </body>
 </html>
