--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>hello</title>
   </head>
   <body>
-    <div>hello</div>
+    <div style="color:red">hello</div>
     <h1>Hello</h1>
    
       <i class="fas fa-hand-holding"></i>
