--- a/hello.html
+++ b/hello.html
@@ -7,12 +7,11 @@
     <title>hello</title>
   </head>
   <body>
-    <div style="color:red">hello</div>
+    <div style="color: red">hello!!</div>
     <h1>Hello</h1>
-   
-      <i class="fas fa-hand-holding"></i>
-      hahhahahahhaha
-      <p>Wrong head tag</p>
-   
+
+    <i class="fas fa-hand-holding"></i>
+    hahhahahahhaha
+    <p>Wrong head tag</p>
   </body>
 </html>
