--- a/hello.html
+++ b/hello.html
@@ -9,9 +9,10 @@
   <body>
     <div style="color: red">hello!!</div>
     <h1>Hello</h1>
-
     <i class="fas fa-hand-holding"></i>
     hahhahahahhaha
     <p>Wrong head tag</p>
+    <p>Another <i class="fas fa-tablets"></i></p>
+    <p>Another</p>
   </body>
 </html>
