--- a/hello.html
+++ b/hello.html
@@ -14,5 +14,6 @@
     <p>Wrong head tag</p>
     <p>Another <i class="fas fa-tablets"></i></p>
     <p>Another</p>
+    <h2>Another Test</h2>
   </body>
 </html>
