--- a/hello.html
+++ b/hello.html
@@ -5,23 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hello</title>
+    <style>
+      h1 {
+        color: green;
+      }
+      h2 {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <div style="color: red">hello!!</div>
+    <div>hello!!</div>
     <h1>Hello</h1>
-<<<<<<< HEAD
-    <head>
-      <i class="fas fa-hand-holding"></i>
-      <p>Test again</p>
-    </head>
-=======
+
     <i class="fas fa-hand-holding"></i>
-    hahhahahahhaha
-    <p>Wrong head tag</p>
-    <p>Another <i class="fas fa-tablets"></i></p>
-    <p>Another</p>
-    <h2>Another Test</h2>
-    NNNNNNNhahahhahahnnnnnnnnnnnnOOOOO
->>>>>>> b730e42b48cfb1bb98d7dccae61c3e4e3e152df5
+    <p>Test again</p>
   </body>
 </html>
